--- a/RaftServer/app/views/index.scala.html
+++ b/RaftServer/app/views/index.scala.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
     <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/prism.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
+    <script defer src='@routes.Assets.versioned("javascripts/index.js")' type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </head>
 
   <body>
@@ -18,6 +20,9 @@
         <h1>Play Hello World Web Tutorial</h1>
       </div>
     </section>
+    <div>
+      <p id="jsonContent"></p>
+    </div>
   </body>
 
 </html>
