--- a/RaftServer/app/views/index.scala.html
+++ b/RaftServer/app/views/index.scala.html
@@ -3,26 +3,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>Hello</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
-    <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/prism.css")'>
-    <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
-    <script defer src='@routes.Assets.versioned("javascripts/index.js")' type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  </head>
+    <head>
+        <title>Hello</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/table.css")'>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/prism.css")'>
+        <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
+        <script defer src='@routes.Assets.versioned("javascripts/index.js")' type="text/javascript"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    </head>
 
-  <body>
-    <section id="top">
-      <div class="wrapper">
-        <img class="resize" src="assets/images/play_icon_reverse.svg" alt="logo" />
-        <h1>Play Hello World Web Tutorial</h1>
-      </div>
-    </section>
-    <div>
-      <p id="jsonContent"></p>
-    </div>
-  </body>
+    <body>
+        <section id="top">
+            <div class="wrapper">
+                <img class="resize" src="assets/images/play_icon_reverse.svg" alt="logo" />
+                <h1>Play Hello World Web Tutorial</h1>
+            </div>
+        </section>
+        <div style="padding: 16px">
+            <div id="leaderContainer">
+                <h6>Leader</h6>
+                <p id="nodeId">Node id:</p>
+                <p>Next indices:</p>
+                <table id="nextIndicesTable">
+                    <tbody>
+                        <tr>
+                            <th>Akka node path</th>
+                            <th>Next index to be applied</th>
+                        </tr>
+                    </tbody>
+                </table>
+                <p id="pendingItems">Pending items:</p>
+                <p id="leaderCommit">Leader commit:</p>
+                <p id="log">Log:</p>
+            </div>
+            <div id="candidatesContainer">
+                <h6>Candidates</h6>
+            </div>
+            <div id="followersContainer">
+                <h6>Followers</h6>
+            </div>
+            @* <p id="jsonContent"></p>*@
+        </div>
+    </body>
 
 </html>
